Refined Activity and Location Handlers, GooglePlay check utility class, added a way to display the list of physical stops, geofence are set around selected stop and notification is ready to trigger when user is still.